--- a/pandey.html
+++ b/pandey.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>My web page</h1>
+        <h2>Pulling from Github</h2>
         Hello world!
     </body>
 </html>
