--- a/pandey.html
+++ b/pandey.html
@@ -4,7 +4,7 @@
         <title>First</title>
     </head>
     <body>
-        <h1 style="color:blue;">My web page</h1>
+        <h1 style="color:red;">My web page</h1>
         <h2>Pulling from Github</h2>
         Hello world!
     </body>
